apollo-router/src/plugins/demand_control/snapshots/uhg_custom_appollo_roouter__plugins__demand_control__test__enforce_on_subgraph_response.snap
---
source: apollo-router/src/plugins/demand_control/mod.rs
assertion_line: 598
expression: body
---
data: ~
errors:
  - message: query estimated cost 2 exceeded configured maximum 1
    extensions:
      cost.estimated: 2
      cost.max: 1
      code: COST_ESTIMATED_TOO_EXPENSIVE
