apollo-router/src/plugins/demand_control/snapshots/uhg_custom_appollo_roouter__plugins__demand_control__test__measure_on_subgraph_response.snap
---
source: apollo-router/src/plugins/demand_control/mod.rs
assertion_line: 589
expression: body
---
data: ~
